# cuda-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pixi.toml
src/: CMakeLists.txt
src/01_memcpy/: CMakeLists.txt  cpu.cpp  from_python.py  malloc.cpp  multiple_gpu.cu  multiple_gpu.py  single_gpu.cu
src/02_cutensor/: multiple_gpu.cu
src/include/: common.h  cutensor_helpers.h
